
[workspace]

members = [
  "components/funder",
  "components/channeler",
  "components/common",
  "components/proto",
  "components/crypto",
  "components/identity",
  "components/timer",
  "components/relay",
  "components/secure_channel",
  "components/keepalive",
  "components/app_server",
  "components/index_client",
  "components/index_server",
  "components/database",
  "components/node",
  "components/net",
  "components/version",
  "components/bin",
  "components/stctrl",
  "components/stwebpay",
  "components/app",
  "components/test",
]

# Temporary fix according to: https://github.com/rustasync/tide/issues/237
[patch.crates-io]
http-service = { git = "https://github.com/rustasync/http-service", branch = "master" }
http-service-hyper = { git = "https://github.com/rustasync/http-service", branch = "master" }
