
[workspace]

members = [
  "components/funder",
  "components/channeler",
  "components/common",
  "components/proto",
  "components/crypto",
  "components/identity",
  "components/timer",
  "components/relay",
  "components/secure_channel",
  "components/keepalive",
  "components/app_server",
  "components/index_client",
  "components/index_server",
  "components/database",
  "components/node",
  "components/net",
  "components/version",
  "components/bin",
  "components/stctrl",
  "components/stcompact",
  "components/app",
  "components/test",
  "components/mutual_from",
  "components/capnp_conv",
  "components/capnp_conv/capnp_conv_derive",
  "components/signature",
  "components/route",
  "components/lockfile",
  "components/connection",
  "components/app_client",
]
