[package]
name = "cswitch"
version = "0.1.0"
authors = ["real <real@freedomlayer.org>"]
build = "build.rs"

[build-dependencies]

capnpc = "0.8.7"

[dependencies]

rand = "0.3.18"
bytes = "0.4.5"
num-bigint = "0.1.40"
untrusted = "0.5.0"
ring = "0.12.1"

futures = "0.1.17"
tokio-core = "0.1.10"
tokio-io = "0.1.4"

byteorder = "1.1.0"

log = "0.3.8"
env_logger = "0.4.3"

capnp = "0.8.12"

futures-timer = { git="https://github.com/alexcrichton/futures-timer", version = "0.1" }
