[package]
name = "cswitch"
version = "0.1.0"
authors = ["real <real@freedomlayer.org>"]
build = "build.rs"

[features]
default = []
dev = ["clippy"]

[[bin]]
name = "mock_networker"
path = "test_utils/mock_networker.rs"

[dependencies]
rand = "0.3.18"
bytes = "0.4.5"
num-bigint = "0.1.40"
untrusted = "0.5.0"
ring = "0.12.1"
crossbeam = "0.3"

futures = "0.1.17"
tokio-core = "0.1.10"
tokio-io = "0.1.4"

byteorder = { version="1.1.0", features=["i128"] }

log = "0.3.8"
env_logger = "0.4.3"

clippy = {version = "*", optional = true}

capnp = "0.8.12"

pretty_env_logger = "0.1"

futures-timer = { git="https://github.com/alexcrichton/futures-timer", version = "0.1" }

futures-mutex = "0.2"

[build-dependencies]
capnpc = "0.8.7"