[package]
name = "cswitch"
version = "0.1.0"
authors = ["real <real@freedomlayer.org>"]
build = "build.rs"

[features]
default = []
dev = ["clippy"]

 [[bin]]
 name = "mock_networker"
 path = "test_utils/mock_networker.rs"

[dependencies]
log = "0.4"
pretty_env_logger = "0.1"

rand = "0.4"
ring = "0.13.0-alpha"
untrusted = "0.6"
crossbeam = "0.3"

bytes = "0.4"
futures = "0.1"
tokio-io = "0.1"
tokio-core = "0.1"

capnp = "0.8"
rusqlite = "0.13"

[dependencies.clippy]
version = "*"
optional = true

[dependencies.byteorder]
version = "1.1"
features = ["i128"]

[dependencies.futures-timer]
version = "0.1"
git = "https://github.com/alexcrichton/futures-timer"

[build-dependencies]
capnpc = "0.8"