[package]
name = "offst-app"
version = "0.1.0"
authors = ["real <real@freedomlayer.org>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]

common = { path = "../common", version = "0.1.0", package = "offst-common" }
crypto = { path = "../crypto", version = "0.1.0", package = "offst-crypto" }
identity = { path = "../identity", version = "0.1.0" , package = "offst-identity" }
timer = { path = "../timer", version = "0.1.0" , package = "offst-timer" }
proto = { path = "../proto", version = "0.1.0" , package = "offst-proto" }
net = { path = "../net", version = "0.1.0" , package = "offst-net" }
keepalive = { path = "../keepalive", version="0.1.0", package = "offst-keepalive" }
secure_channel = { path = "../secure_channel", version="0.1.0", package = "offst-secure-channel" }
version = { path = "../version", version="0.1.0", package = "offst-version" }


log = "0.4"
simple_logger = "1.0.1"
futures-preview = "0.3.0-alpha.16"
