[package]
name = "offst-channeler"
version = "0.1.0"
authors = ["real <real@freedomlayer.org>"]

edition = "2018"

[dependencies]

utils = { path = "../utils", version = "0.1.0", package = "offst-utils" }
crypto = { path = "../crypto", version = "0.1.0", package = "offst-crypto" }
identity = { path = "../identity", version = "0.1.0" , package = "offst-identity" }
timer = { path = "../timer", version = "0.1.0" , package = "offst-timer" }
proto = { path = "../proto", version = "0.1.0" , package = "offst-proto" }
relay = { path = "../relay", version = "0.1.0" , package = "offst-relay" }
secure_channel = { path = "../secure_channel", version = "0.1.0" , package = "offst-secure-channel" }

log = "0.4"
# futures-preview = "0.3.0-alpha.9"
futures-preview = { git = "https://github.com/rust-lang-nursery/futures-rs", rev = "5d87cce202" }

