[package]
name = "offset-channeler"
version = "0.1.0"
authors = ["real <real@freedomlayer.org>"]
license = "AGPL-3.0"
edition = "2018"

[dependencies]

common = { path = "../common", version = "0.1.0", package = "offset-common" }
crypto = { path = "../crypto", version = "0.1.0", package = "offset-crypto" }
identity = { path = "../identity", version = "0.1.0" , package = "offset-identity" }
timer = { path = "../timer", version = "0.1.0" , package = "offset-timer" }
proto = { path = "../proto", version = "0.1.0" , package = "offset-proto" }
relay = { path = "../relay", version = "0.1.0" , package = "offset-relay" }

log = "0.4"
futures = "0.3.1"

[dev-dependencies]

futures = {version = "0.3.1", features = ["thread-pool"]}
