[package]
name = "offst-common"
version = "0.1.0"
authors = ["real <real@freedomlayer.org>"]
edition = "2018"

[dependencies]
log = "0.4"


bytes = "0.4"
futures-preview = {version = "0.3.0-alpha.13", features = ["compat"] }

tokio = "0.1"

serde = "1"
byteorder = "1.1"

backtrace = "0.3.14"

[dev-dependencies]

