[package]
name = "offst-common"
version = "0.1.0"
authors = ["real <real@freedomlayer.org>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
log = "0.4"


bytes = "0.4"
futures = "0.3.1"
# futures-preview = {version = "0.3.0-alpha.16", features = ["compat"] }

tokio = "0.1"

serde = "1"
byteorder = "1.1"

backtrace = "0.3.14"

[dev-dependencies]

