[package]
name = "offset-common"
version = "0.1.0"
authors = ["real <real@freedomlayer.org>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
log = "0.4"

bytes = "0.5.4"
futures = "0.3.1"

serde = "1.0.104"
byteorder = "1.1"

backtrace = "0.3.14"
base64 = "0.10.1"
uint = "0.8.5"

[dev-dependencies]

serde = {version = "1.0.104", features = ["derive"]}
paste = "1.0.1"
