[package]
name = "offset-connection"
version = "0.1.0"
authors = ["real <real@freedomlayer.org>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]

common = { path = "../common", version = "0.1.0", package = "offset-common" }
crypto = { path = "../crypto", version = "0.1.0", package = "offset-crypto" }
identity = { path = "../identity", version = "0.1.0" , package = "offset-identity" }
timer = { path = "../timer", version = "0.1.0" , package = "offset-timer" }
proto = { path = "../proto", version = "0.1.0" , package = "offset-proto" }
signature = { path = "../signature", version = "0.1.0" , package = "offset-signature" }
net = { path = "../net", version = "0.1.0" , package = "offset-net" }
keepalive = { path = "../keepalive", version="0.1.0", package = "offset-keepalive" }
secure_channel = { path = "../secure_channel", version="0.1.0", package = "offset-secure-channel" }
version = { path = "../version", version="0.1.0", package = "offset-version" }


log = "0.4"
simple_logger = "1.0.1"

futures = "0.3.1"
derive_more = "0.14.0"

[dev-dependencies]

futures = {version = "0.3.1", features = ["thread-pool"]}
