[package]
name = "offst-crypto"
version = "0.1.0"
authors = ["real <real@freedomlayer.org>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]

common = { path = "../common", version = "0.1.0", package = "offst-common" }
proto = { path = "../proto", version = "0.1.0", package = "offst-proto" }

rand = "0.5"
# ring = "=0.13.0-alpha"
ring = { git = "https://github.com/freedomlayer/ring", branch = "real/version-0.13.0-alpha4" }
untrusted = "0.6"

serde = {version = "1.0.104", features = ["derive"]}
bytes = "0.4"
base64 = "0.9"

derive_more = "0.14.0"

[dependencies.byteorder]
version = "1.1"
features = ["i128"]

[dev-dependencies]
