[package]
name = "offset-crypto"
version = "0.1.0"
authors = ["real <real@freedomlayer.org>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]

common = { path = "../common", version = "0.1.0", package = "offset-common" }
proto = { path = "../proto", version = "0.1.0", package = "offset-proto" }

# ring = "=0.13.0-alpha"
ring = { git = "https://github.com/freedomlayer/ring", branch = "real/version-0.13.0-alpha4" }
# untrusted = "0.6"
#
x25519-dalek = "0.6.0"
ed25519-dalek = "1.0.0-pre.3"


sha2 = "0.9.0"
# hkdf = "0.8.0"
hkdf = "0.9.0-alpha.0"
chacha20poly1305 = "0.5.1"


serde = {version = "1.0.104", features = ["derive"]}
bytes = "0.5.4"
base64 = "0.9"

derive_more = "0.14.0"

# Quickcheck:
quickcheck = {version = "0.9"}
quickcheck_derive = {version = "0.2.1"}

rand = "0.7.3"
rand_core = "0.5.1"

[dependencies.byteorder]
version = "1.1"
features = ["i128"]

[dev-dependencies]
