[package]
name = "offst-database"
version = "0.1.0"
authors = ["real <real@freedomlayer.org>"]
license = "AGPL-3.0"
edition = "2018"

[dependencies]

common = { path = "../common", version = "0.1.0", package = "offst-common" }

log = "0.4"
futures = "0.3.1"
im = "12.0.0"

atomicwrites = "0.2.2"

serde = {version = "1", features = ["derive"]}
# serde_json = "1.0.27"
base64 = "0.9"
bincode = "1.1.2"

[dev-dependencies]

tempfile = "3.0.5"

futures = {version = "0.3.1", features = ["thread-pool"]}
