[package]
name = "offset-database"
version = "0.1.0"
authors = ["real <real@freedomlayer.org>"]
license = "AGPL-3.0"
edition = "2018"

[dependencies]

common = { path = "../common", version = "0.1.0", package = "offset-common" }

log = "0.4"
futures = "0.3.1"
im = "15.1.0"

atomicwrites = "0.2.2"

serde = {version = "1.0.104", features = ["derive"]}

base64 = "0.9"
# bincode = "1.1.2"
serde_json = "1.0.44"

[dev-dependencies]

tempfile = "3.1.0"

futures = {version = "0.3.1", features = ["thread-pool"]}
