[package]
name = "offset-funder"
version = "0.1.0"
authors = ["real <real@freedomlayer.org>"]
license = "AGPL-3.0"
edition = "2018"


[dependencies]

common = { path = "../common", version = "0.1.0", package = "offset-common" }
crypto = { path = "../crypto", version = "0.1.0", package = "offset-crypto"}
identity = { path = "../identity", version = "0.1.0", package = "offset-identity" }
proto = { path = "../proto", version = "0.1.0", package = "offset-proto" }
signature = { path = "../signature", version = "0.1.0", package = "offset-signature" }
database = { path = "../database", version = "0.1.0", package = "offset-database" }

log = "0.4"
pretty_env_logger = "0.2"

bytes = "0.5.4"
futures = "0.3.1"


serde = {version = "1.0.104", features = ["derive"]}

im = {version = "15.1.0", features = ["serde", "quickcheck"]}
byteorder = {version = "1.1", features = ["i128"]}

# Quickcheck:
quickcheck = {version = "0.9"}
quickcheck_macros = {version = "0.8"}
quickcheck_derive = {version = "0.2.1"}
rand = {version = "0.7.2"}

[dev-dependencies]

futures = {version = "0.3.1", features = ["thread-pool"]}
