[package]
name = "offst-identity"
version = "0.1.0"
authors = ["real <real@freedomlayer.org>"]

edition = "2018"

[dependencies]

common = { path = "../common", version = "0.1.0", package = "offst-common" }
crypto = { path = "../crypto", version = "0.1.0" , package = "offst-crypto"}

futures-preview = "0.3.0-alpha.16"

[dev-dependencies]

