[package]
name = "offst-identity"
version = "0.1.0"
authors = ["real <real@freedomlayer.org>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]

common = { path = "../common", version = "0.1.0", package = "offst-common" }
crypto = { path = "../crypto", version = "0.1.0" , package = "offst-crypto"}
proto = { path = "../proto", version = "0.1.0" , package = "offst-proto"}

futures = "0.3.1"

[dev-dependencies]

