[package]
name = "offst-index-client"
version = "0.1.0"
authors = ["real <real@freedomlayer.org>"]
license = "AGPL-3.0"
edition = "2018"

[dependencies]

common = { path = "../common", version = "0.1.0", package = "offst-common" }
crypto = { path = "../crypto", version = "0.1.0", package = "offst-crypto" }
identity = { path = "../identity", version = "0.1.0" , package = "offst-identity" }
timer = { path = "../timer", version = "0.1.0" , package = "offst-timer" }
proto = { path = "../proto", version = "0.1.0" , package = "offst-proto" }
signature = { path = "../signature", version = "0.1.0" , package = "offst-signature" }
database = { path = "../database", version = "0.1.0", package = "offst-database" }

log = "0.4"
# TODO: How to make sure this is only imported in tests?
env_logger = "0.6.0"
futures = "0.3.1"

serde = {version = "1.0.87", features = ["derive"]}

[dev-dependencies]

futures = {version = "0.3.1", features = ["thread-pool"]}
