[package]
name = "offset-index-server"
version = "0.1.0"
authors = ["real <real@freedomlayer.org>"]
license = "AGPL-3.0"
edition = "2018"

[dependencies]

common = { path = "../common", version = "0.1.0", package = "offset-common" }
crypto = { path = "../crypto", version = "0.1.0", package = "offset-crypto" }
identity = { path = "../identity", version = "0.1.0" , package = "offset-identity" }
timer = { path = "../timer", version = "0.1.0" , package = "offset-timer" }
proto = { path = "../proto", version = "0.1.0" , package = "offset-proto" }
signature = { path = "../signature", version = "0.1.0" , package = "offset-signature" }

log = "0.4"
# TODO: How to make sure this is only imported in tests?
env_logger = "0.6.0"

futures = "0.3.1"

[dev-dependencies]

futures = {version = "0.3.1", features = ["thread-pool"]}
