[package]
name = "offst-lockfile"
version = "0.1.0"
authors = ["real <real@freedomlayer.org>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]

common = { path = "../common", version = "0.1.0", package = "offst-common" }

log = "0.4"
futures = "0.3.1"
async-std = {version = "1.2.0", features=["unstable"]}
chrono = "0.4.10"

byteorder = "1.1"

[dev-dependencies]

futures = {version = "0.3.1", features = ["thread-pool"]}
