[package]
name = "offst-net"
version = "0.1.0"
authors = ["real <real@freedomlayer.org>"]

edition = "2018"

[dependencies]

common = { path = "../common", version = "0.1.0", package = "offst-common" }
proto = { path = "../proto", version = "0.1.0" , package = "offst-proto" }

# tokio-io = "0.1"
# tokio-core = "0.1"
# tokio-codec = "0.1"
tokio = "0.1"

# For compatibility layer:
futures_01 = { version = "0.1", package = "futures" }
futures-preview = {version = "0.3.0-alpha.16", features = ["compat"] }

log = "0.4"

bytes = "0.4"

[dev-dependencies]

env_logger = "0.6.0"
