[package]
name = "offst-net"
version = "0.1.0"
authors = ["real <real@freedomlayer.org>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]

common = { path = "../common", version = "0.1.0", package = "offst-common" }
proto = { path = "../proto", version = "0.1.0" , package = "offst-proto" }

futures = "0.3.1"
async-std = "1.0.1"

log = "0.4"

bytes = "0.4"

[dev-dependencies]

env_logger = "0.6.0"

futures = { version = "0.3.1", features = ["thread-pool"] }
