[package]
name = "offst-node"
version = "0.1.0"
authors = ["real <real@freedomlayer.org>"]
license = "AGPL-3.0"
edition = "2018"

[dependencies]

common = { path = "../common", version = "0.1.0", package = "offst-common" }
crypto = { path = "../crypto", version = "0.1.0", package = "offst-crypto" }
identity = { path = "../identity", version = "0.1.0" , package = "offst-identity" }
timer = { path = "../timer", version = "0.1.0" , package = "offst-timer" }
proto = { path = "../proto", version = "0.1.0" , package = "offst-proto" }
signature = { path = "../signature", version = "0.1.0" , package = "offst-signature" }
database = { path = "../database", version = "0.1.0" , package = "offst-database" }
funder = { path = "../funder", version = "0.1.0" , package = "offst-funder" }
index_client = { path = "../index_client", version = "0.1.0" , package = "offst-index-client" }
app_server = { path = "../app_server", version = "0.1.0" , package = "offst-app-server" }
channeler = { path = "../channeler", version = "0.1.0" , package = "offst-channeler" }
relay = { path = "../relay", version = "0.1.0" , package = "offst-relay" }
net = { path = "../net", version = "0.1.0" , package = "offst-net" }


log = "0.4"
futures = "0.3.1"
serde = {version = "1.0.87", features = ["derive"]}

derive_more = "0.14.0"
