[package]
name = "offset-node"
version = "0.1.0"
authors = ["real <real@freedomlayer.org>"]
license = "AGPL-3.0"
edition = "2018"

[dependencies]

common = { path = "../common", version = "0.1.0", package = "offset-common" }
crypto = { path = "../crypto", version = "0.1.0", package = "offset-crypto" }
identity = { path = "../identity", version = "0.1.0" , package = "offset-identity" }
timer = { path = "../timer", version = "0.1.0" , package = "offset-timer" }
proto = { path = "../proto", version = "0.1.0" , package = "offset-proto" }
signature = { path = "../signature", version = "0.1.0" , package = "offset-signature" }
database = { path = "../database", version = "0.1.0" , package = "offset-database" }
funder = { path = "../funder", version = "0.1.0" , package = "offset-funder" }
index_client = { path = "../index_client", version = "0.1.0" , package = "offset-index-client" }
app_server = { path = "../app_server", version = "0.1.0" , package = "offset-app-server" }
channeler = { path = "../channeler", version = "0.1.0" , package = "offset-channeler" }
relay = { path = "../relay", version = "0.1.0" , package = "offset-relay" }
net = { path = "../net", version = "0.1.0" , package = "offset-net" }


log = "0.4"
futures = "0.3.1"
serde = {version = "1.0.104", features = ["derive"]}

derive_more = "0.14.0"

# Quickcheck:
quickcheck = "0.9.2"
quickcheck_derive = "0.3"
quickcheck_macros = "0.9.1"
rand = {version = "0.7.2"}
