[package]
name = "offst-proto"
version = "0.1.0"
authors = ["real <real@freedomlayer.org>"]
build = "build.rs"

[dependencies]

crypto = { path = "../crypto", version = "0.1.0", package = "offst-crypto" }
common = { path = "../common", version = "0.1.0", package = "offst-common" }

capnp = "0.9.4"
byteorder = "1.1"

serde = "1"
serde_derive = "1"
serde_json = "1.0.27"
bytes = "0.4"
toml = "0.4.10"
base64 = "0.10.1"

im = {version = "12.0.0", features = ["serde"]}

derive_more = "0.14.0"

[dev-dependencies]
tempfile = "3.0.5"

[build-dependencies]
capnpc = "0.9.3"
