[package]
name = "offst-proto"
version = "0.1.0"
authors = ["real <real@freedomlayer.org>"]
license = "MIT OR Apache-2.0"
build = "build.rs"
edition = "2018"

[dependencies]

crypto = { path = "../crypto", version = "0.1.0", package = "offst-crypto" }
common = { path = "../common", version = "0.1.0", package = "offst-common" }
mutual_from = { path = "../mutual_from", version = "0.1.0", package = "offst-mutual-from" }

# capnp = "0.9.4"
capnp = "0.10.0"

byteorder = "1.1"

serde = "1"
serde_derive = "1"
serde_json = "1.0.27"
bytes = "0.4"
toml = "0.4.10"
base64 = "0.10.1"

im = {version = "12.0.0", features = ["serde"]}

derive_more = "0.14.0"

num-bigint = "0.2.2"
num-traits = "0.2.6"

[dev-dependencies]
tempfile = "3.0.5"

[build-dependencies]
# capnpc = "0.9.3"
capnpc = "0.10.0"
