[package]
name = "offst-proto"
version = "0.1.0"
authors = ["real <real@freedomlayer.org>"]
license = "MIT OR Apache-2.0"
build = "build.rs"
edition = "2018"

[dependencies]

common = { path = "../common", version = "0.1.0", package = "offst-common" }
mutual_from = { path = "../mutual_from", version = "0.1.0", package = "offst-mutual-from" }
capnp_conv = { path = "../capnp_conv", version = "0.1.0", package = "offst-capnp-conv" }

capnp = "0.10.0"

byteorder = "1.1"

serde = { version = "1.0.104", features = ["derive"] }

serde_json = "1.0.27"
bytes = "0.4"
toml = "0.4.10"
base64 = "0.10.1"

im = {version = "12.0.0", features = ["serde"]}

derive_more = "0.14.0"

num-bigint = "0.2.2"
num-traits = "0.2.6"

paste = "0.1.5"

# Quickcheck:
quickcheck = {version = "0.8"}
quickcheck_derive = {version = "0.2.1"}
rand = {version = "0.7.2"}

[dev-dependencies]
tempfile = "3.0.5"

[build-dependencies]
capnpc = "0.10.0"
