[package]
name = "offst-relay-server-bin"
version = "0.1.0"
authors = ["real <real@freedomlayer.org>"]

edition = "2018"

[dependencies]

common = { path = "../common", version = "0.1.0", package = "offst-common" }
crypto = { path = "../crypto", version = "0.1.0", package = "offst-crypto" }
identity = { path = "../identity", version = "0.1.0" , package = "offst-identity" }
timer = { path = "../timer", version = "0.1.0" , package = "offst-timer" }
proto = { path = "../proto", version = "0.1.0" , package = "offst-proto" }
relay = { path = "../relay", version = "0.1.0" , package = "offst-relay" }
keepalive = { path = "../keepalive", version = "0.1.0" , package = "offst-keepalive" }
secure_channel = { path = "../secure_channel", version = "0.1.0" , package = "offst-secure-channel" }
version = { path = "../version", version = "0.1.0" , package = "offst-version" }
net = { path = "../net", version = "0.1.0" , package = "offst-net" }


log = "0.4"
futures-preview = "0.3.0-alpha.11"

